# Livekit-voice-agent

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ruff.yml  tests.yml
.mypy_cache/3.12/: cache.db-journal
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/token/: route.ts
frontend/components/: VoiceAgent.tsx
scripts/: check_types.py
src/: agent.py  unified_agent.py
src/services/: __init__.py  healthcare.py  orders.py  real_estate.py  router.py  scheduling.py  user_data.py
tests/: test_agent.py  test_unified_services.py
